added social buttons

--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                     <navigationItem key="navigationItem" id="lC6-sg-O5W">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="w4m-C8-G5S">
-                            <rect key="frame" x="180" y="5.5" width="240" height="33"/>
+                            <rect key="frame" x="180" y="6" width="240" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gbx-0T-Rgf">
@@ -724,7 +724,7 @@ Two times at WWDC!</string>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Contact me!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cXg-Tg-DLf">
                                                 <rect key="frame" x="20" y="1191" width="560" height="26.5"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="22"/>
-                                                <color key="textColor" red="0.070588235294117646" green="0.27450980392156865" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.070588235294117646" green="0.27450980392156865" blue="0.52941176470588236" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dfY-G6-jEd">
@@ -761,69 +761,10 @@ Two times at WWDC!</string>
                                             </button>
                                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7mi-NS-L7i">
                                                 <rect key="frame" x="213" y="1268" width="175" height="30"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijt-iV-lnk">
-                                                        <rect key="frame" x="12" y="0.0" width="30" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" secondItem="Ijt-iV-lnk" secondAttribute="height" multiplier="1:1" id="FrD-36-ZYM"/>
-                                                        </constraints>
-                                                        <state key="normal" image="facebook_test_icn">
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="facebookClied:" destination="ixk-1w-ECw" eventType="touchUpInside" id="mxW-QL-cG5"/>
-                                                        </connections>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BhS-ZP-JYi">
-                                                        <rect key="frame" x="96" y="0.0" width="30" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" secondItem="BhS-ZP-JYi" secondAttribute="height" multiplier="1:1" id="HEk-9S-Gsa"/>
-                                                        </constraints>
-                                                        <state key="normal" image="mail_test_icn">
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="emailClicked:" destination="ixk-1w-ECw" eventType="touchUpInside" id="H5A-NI-zIc"/>
-                                                        </connections>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUj-k4-RuS">
-                                                        <rect key="frame" x="54" y="0.0" width="30" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" secondItem="XUj-k4-RuS" secondAttribute="height" multiplier="1:1" id="8la-fO-DVp"/>
-                                                        </constraints>
-                                                        <state key="normal" image="twitter_test_icn">
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                        </state>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eh-Hh-ADw">
-                                                        <rect key="frame" x="138" y="0.0" width="30" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" secondItem="2eh-Hh-ADw" secondAttribute="height" multiplier="1:1" id="gxt-5V-mD3"/>
-                                                        </constraints>
-                                                        <state key="normal" image="github_test_icn">
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="toGithub:" destination="ixk-1w-ECw" eventType="touchUpInside" id="wYg-r8-nfH"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
-                                                    <constraint firstItem="BhS-ZP-JYi" firstAttribute="leading" secondItem="XUj-k4-RuS" secondAttribute="trailing" constant="12" id="5wv-q8-RLW"/>
-                                                    <constraint firstItem="XUj-k4-RuS" firstAttribute="height" secondItem="BhS-ZP-JYi" secondAttribute="height" id="GU1-1B-Ay8"/>
                                                     <constraint firstAttribute="height" constant="30" id="QAc-OK-DRa"/>
                                                     <constraint firstAttribute="width" constant="175" id="RbZ-bB-2x8"/>
-                                                    <constraint firstItem="BhS-ZP-JYi" firstAttribute="top" secondItem="7mi-NS-L7i" secondAttribute="top" id="T06-xE-pea"/>
-                                                    <constraint firstItem="XUj-k4-RuS" firstAttribute="top" secondItem="7mi-NS-L7i" secondAttribute="top" id="Vc7-zO-m8G"/>
-                                                    <constraint firstAttribute="height" secondItem="Ijt-iV-lnk" secondAttribute="height" id="Xww-xz-E8B"/>
-                                                    <constraint firstItem="XUj-k4-RuS" firstAttribute="height" secondItem="7mi-NS-L7i" secondAttribute="height" id="bFz-1e-gqJ"/>
-                                                    <constraint firstItem="Ijt-iV-lnk" firstAttribute="top" secondItem="7mi-NS-L7i" secondAttribute="top" id="bpC-se-pkc"/>
-                                                    <constraint firstItem="Ijt-iV-lnk" firstAttribute="leading" secondItem="7mi-NS-L7i" secondAttribute="leading" constant="12" id="jgh-ga-Fl9"/>
-                                                    <constraint firstItem="2eh-Hh-ADw" firstAttribute="leading" secondItem="BhS-ZP-JYi" secondAttribute="trailing" constant="12" id="kW6-S9-gdU"/>
-                                                    <constraint firstItem="2eh-Hh-ADw" firstAttribute="top" secondItem="7mi-NS-L7i" secondAttribute="top" id="kjF-A2-iYX"/>
-                                                    <constraint firstItem="XUj-k4-RuS" firstAttribute="leading" secondItem="Ijt-iV-lnk" secondAttribute="trailing" constant="12" id="mZk-sg-3mF"/>
-                                                    <constraint firstAttribute="height" secondItem="2eh-Hh-ADw" secondAttribute="height" id="uWJ-Wy-tBP"/>
                                                 </constraints>
                                             </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" directionalLockEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xx6-iB-pwC">
@@ -957,7 +898,7 @@ Two times at WWDC!</string>
                         <outlet property="mapView" destination="ebs-QW-EAg" id="url-qp-WN5"/>
                         <outlet property="nameLabel" destination="hVB-pe-aV2" id="uQt-gc-566"/>
                         <outlet property="shortBioLabel" destination="T5W-GY-yiC" id="cr6-3d-aKM"/>
-                        <outlet property="twitterClicked" destination="XUj-k4-RuS" id="4gp-my-VJv"/>
+                        <outlet property="viewSocial" destination="7mi-NS-L7i" id="pmu-D2-RUK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6pL-Qy-WJg" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -980,13 +921,9 @@ Two times at WWDC!</string>
         <image name="MatthijsLogemann" width="106" height="106"/>
         <image name="WallpaperWWDC" width="5535" height="3690"/>
         <image name="back-arrow" width="30" height="30"/>
-        <image name="facebook_test_icn" width="60" height="60"/>
-        <image name="github_test_icn" width="60" height="60"/>
         <image name="iPhone" width="70" height="128"/>
-        <image name="mail_test_icn" width="60" height="60"/>
         <image name="ngiancecchi_test_profile" width="960" height="960"/>
         <image name="no-profile" width="632" height="673"/>
-        <image name="twitter_test_icn" width="60" height="60"/>
         <image name="wwdc15-hero_2x-4" width="1250" height="1250"/>
     </resources>
     <inferredMetricsTieBreakers>
