--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -919,16 +919,28 @@ Two times at WWDC!</string>
                         <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-profile" translatesAutoresizingMaskIntoConstraints="NO" id="Bd6-fZ-KJn" customClass="AsyncImageView">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2OX-QM-NHC">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
-                            </imageView>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-profile" translatesAutoresizingMaskIntoConstraints="NO" id="Bd6-fZ-KJn" customClass="AsyncImageView">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Bd6-fZ-KJn" firstAttribute="top" secondItem="2OX-QM-NHC" secondAttribute="top" id="LvR-2I-wV0"/>
+                                    <constraint firstAttribute="trailing" secondItem="Bd6-fZ-KJn" secondAttribute="trailing" id="QcH-K9-RA0"/>
+                                    <constraint firstItem="Bd6-fZ-KJn" firstAttribute="centerY" secondItem="2OX-QM-NHC" secondAttribute="centerY" id="aZx-uu-sHv"/>
+                                    <constraint firstAttribute="bottom" secondItem="Bd6-fZ-KJn" secondAttribute="bottom" id="ihI-9q-2Eb"/>
+                                    <constraint firstItem="Bd6-fZ-KJn" firstAttribute="centerX" secondItem="2OX-QM-NHC" secondAttribute="centerX" id="nf8-rS-zqc"/>
+                                    <constraint firstItem="Bd6-fZ-KJn" firstAttribute="leading" secondItem="2OX-QM-NHC" secondAttribute="leading" id="ogA-7u-gl5"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Bd6-fZ-KJn" firstAttribute="leading" secondItem="RBx-Sm-ZhF" secondAttribute="leading" id="8Zg-q1-tjg"/>
-                            <constraint firstItem="Bd6-fZ-KJn" firstAttribute="top" secondItem="b2a-ek-anX" secondAttribute="bottom" id="AhN-W5-vxp"/>
-                            <constraint firstItem="Bd6-fZ-KJn" firstAttribute="bottom" secondItem="eee-DG-kKb" secondAttribute="top" id="USR-kC-iYQ"/>
-                            <constraint firstAttribute="trailing" secondItem="Bd6-fZ-KJn" secondAttribute="trailing" id="hbj-v6-0bi"/>
+                            <constraint firstAttribute="trailing" secondItem="2OX-QM-NHC" secondAttribute="trailing" id="1Wf-Py-wtp"/>
+                            <constraint firstItem="2OX-QM-NHC" firstAttribute="top" secondItem="b2a-ek-anX" secondAttribute="bottom" id="1zb-BI-pfY"/>
+                            <constraint firstItem="2OX-QM-NHC" firstAttribute="bottom" secondItem="eee-DG-kKb" secondAttribute="top" id="Vqb-L1-P1A"/>
+                            <constraint firstItem="2OX-QM-NHC" firstAttribute="leading" secondItem="RBx-Sm-ZhF" secondAttribute="leading" id="iii-ys-Nr2"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
