--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -923,7 +923,7 @@ Two times at WWDC!</string>
                         <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2OX-QM-NHC">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2OX-QM-NHC">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-profile" translatesAutoresizingMaskIntoConstraints="NO" id="Bd6-fZ-KJn" customClass="AsyncImageView">
@@ -940,6 +940,7 @@ Two times at WWDC!</string>
                                 </constraints>
                             </scrollView>
                         </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="2OX-QM-NHC" secondAttribute="trailing" id="1Wf-Py-wtp"/>
                             <constraint firstItem="2OX-QM-NHC" firstAttribute="top" secondItem="b2a-ek-anX" secondAttribute="bottom" id="1zb-BI-pfY"/>
@@ -959,6 +960,7 @@ Two times at WWDC!</string>
                     <size key="freeformSize" width="300" height="400"/>
                     <connections>
                         <outlet property="imageView" destination="Bd6-fZ-KJn" id="u37-bA-vVE"/>
+                        <outlet property="scrollView" destination="2OX-QM-NHC" id="g3o-H8-6dq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RP1-6q-Tap" userLabel="First Responder" sceneMemberID="firstResponder"/>
